src/app/components/comments/comment/comment.component.scss
@import "../../../../sass/vars.scss";

.comment-wrapper {
  padding: 10px 0 0 15px;
  border-left: 1px solid $accent;

  h2 {
    padding-bottom: 15px;
    font-size: 1.1rem;
    font-weight: normal;
    color: $primarydark;
    line-height: 1.5;

    .highlight {
      color: $accent;
    }
  }

  p {
    padding: 0 0 12px 15px;
    line-height: 1.5;
  }
}

.comment-controls {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding: 10px 15px 20px;

  :not(:last-child) {
    margin-right: 5px;
  }

  button {
    margin-bottom: 5px;
  }
}

.reply-list {

  button {
    margin: 0 0 24px 5px;
  }
}

